nav lg ok, collapsed needs fix

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ nav ._drop ul li img {
 }
 
 #search-btn img {
-  width: 10%;
+  width: 50%;
 }
 
 /* banner general classes */
